# openseat

./: .gitignore  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/apps/outings/: admin.py  apps.py  models.py
backend/apps/outings/migrations/: 0001_initial.py
backend/apps/trust/: admin.py  apps.py  models.py
backend/apps/trust/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  signals.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0002_group_description.py
backend/config/: models.py  settings.py
openseat/: asgi.py  settings.py  urls.py  wsgi.py
