[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.15",
    "django-environ>=0.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.uv.workspace]
members = [
    "openseat",
]
